- Disallow Hardware Wallets -- they are incompatible with SLP anyway due to vendor firmware limiations.

3.4.6 Updates & Features
-----
- Ported many bug fixes from mainline Electron Cash 4.0.0
  ( see: https://github.com/simpleledger/Electron-Cash-SLP/compare/3.4.5...master )
- Patch address level freezing
- Fixed an issue where on new wallets the token balance doesn't update until restart.
- Electron Cash and SLP Edition now can be installed on the same machine and they won't step on each others' toes.
  This was especially a problem if running the installable of Electron Cash Regular and SLP on the same Windows machine.

3.4.7 Updates & Features
-----
- New fancy DMG for MacOS
- New AppImage for linux installs
- Ported many bug fixes from mainline Electron Cash 4.0.1 (and latest code)
- Patched multi-sig wallet import vulnerability, now BIP-39 seeds are required to encourage use of path m/44'/245'/0' for SLP tokens
- Updated SLP feature set activation behavior in preparation for merge with mainline Electron Cash
- Fixed bugs associated with token tab context menu causing errors
- Fixed bugs associated with thread locking around SLP token data read/write activity

3.4.8 Updates & Features
-----
- Added new Burn Tool dialog, accesible via Tokens Tab context menu (right-click on token)
- Fixed Coin Chooser for SLP transactions
- Fixed inaccessible Mint dialog in 3.4.7
- Ported various improvements from mainline Electron Cash latest source

3.4.9 Release discarded

3.4.10 Updates & Features
-----
- Added "simpleledger:" URI support for token payment requests (currently for send tab only)
- Fixed bugs in Send tab related to tokens
- Ported various improvements from mainline Electron Cash latest master branch

3.4.11 Updates & Features
-----
- Added new prompt to user to deposit BCH before tokens can be created
- Fixed bug disabling the token amount field when Address toggle is not set to SLP format